<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#666666">

    <item
        android:id="@+id/scaner"
        android:icon="@drawable/ic_scan"
        android:title="@string/menu_scan"
        app:cnb_iconColor="@color/scan"
        />
    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history"
        app:cnb_iconColor="@color/history"
        />
    <item
        android:id="@+id/generate"
        android:icon="@drawable/ic_star"
        android:title="@string/menu_favourites"
        app:cnb_iconColor="@color/generate"
        />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:cnb_iconColor="@color/settings"
        />
</menu>